--- a/index.html
+++ b/index.html
@@ -8,6 +8,18 @@
   </head>
   <body>
     <h1>AI Recipe Generator</h1>
+    <footer>
+      This AI project was coded by
+      <a href="https://github.com/Khalipa-B" target="_blank">Khalipa Baba</a>
+      and is
+      <a href="https://github.com/Khalipa-B/recipe-generator" target="_blank"
+        >open-sourced on Github</a
+      >
+      and is hosted on
+      <a href="https://github.com/Khalipa-B/recipe-generator" target="_blank"
+        >Netlify</a
+      >
+    </footer>
 
     <script src="src/index.js"></script>
   </body>
