--- a/index.html
+++ b/index.html
@@ -7,19 +7,42 @@
     <title>AI Recipe Generator</title>
   </head>
   <body>
-    <h1>AI Recipe Generator</h1>
-    <footer>
-      This AI project was coded by
-      <a href="https://github.com/Khalipa-B" target="_blank">Khalipa Baba</a>
-      and is
-      <a href="https://github.com/Khalipa-B/recipe-generator" target="_blank"
-        >open-sourced on Github</a
-      >
-      and is hosted on
-      <a href="https://github.com/Khalipa-B/recipe-generator" target="_blank"
-        >Netlify</a
-      >
-    </footer>
+    <div class="container">
+      <header>
+        <h1>AI Recipe Generator</h1>
+      </header>
+      <main>
+        <form>
+          <input
+            type="text"
+            placeholder="Enter recipe, ingredient or
+          keyword"
+            autofocus
+            required
+            autocomplete="off"
+            class="instructions"
+          />
+          <input type="submit" class="submit-button" />
+        </form>
+        <div class="recipe">
+          The recipe will go here
+          <br />
+          The recipe will go here
+        </div>
+      </main>
+      <footer>
+        This AI project was coded by
+        <a href="https://github.com/Khalipa-B" target="_blank">Khalipa Baba</a>
+        and is
+        <a href="https://github.com/Khalipa-B/recipe-generator" target="_blank"
+          >open-sourced on Github</a
+        >
+        and is hosted on
+        <a href="https://github.com/Khalipa-B/recipe-generator" target="_blank"
+          >Netlify</a
+        >
+      </footer>
+    </div>
 
     <script src="src/index.js"></script>
   </body>
