Added styling to the project

--- a/index.html
+++ b/index.html
@@ -12,11 +12,10 @@
         <h1>AI Recipe Generator</h1>
       </header>
       <main>
-        <form>
+        <form class="form">
           <input
             type="text"
-            placeholder="Enter recipe, ingredient or
-          keyword"
+            placeholder="Enter recipe, ingredient or keyword"
             autofocus
             required
             autocomplete="off"
