--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1>AI Recipe Generator</h1>
       </header>
       <main>
-        <form class="form">
+        <form class="form" id="recipe-generator-form">
           <input
             type="text"
             placeholder="Enter recipe, ingredient or keyword"
@@ -23,7 +23,7 @@
           />
           <input type="submit" class="submit-button" />
         </form>
-        <div class="recipe">
+        <div class="recipe" id="recipe">
           The recipe will go here
           <br />
           The recipe will go here
