--- a/index.html
+++ b/index.html
@@ -14,19 +14,22 @@
         <h1>AI Recipe Generator</h1>
       </header>
       <main>
-        <form class="form" id="recipe-generator-form">
-          <input
-            type="text"
-            placeholder="Enter recipe, ingredient or keyword"
-            autofocus
-            required
-            autocomplete="off"
-            class="instructions"
-            id="user-instructions"
-          />
-          <input type="submit" class="submit-button" />
-        </form>
-        <div class="recipe" id="recipe"></div>
+        <div class="form-container">
+          <form class="form" id="recipe-generator-form">
+            <input
+              type="text"
+              placeholder="Enter recipe, ingredient or keyword"
+              autofocus
+              required
+              autocomplete="off"
+              class="instructions"
+              id="user-instructions"
+            />
+            <input type="submit" class="submit-button" />
+          </form>
+          <div class="hint">i.e: Chocolate Cake, Butter or Muffins</div>
+        </div>
+        <div class="recipe hidden blink" id="recipe"></div>
       </main>
       <footer>
         This AI project was coded by
