Corrected Netlify link

--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
           >open-sourced on Github</a
         >
         and is hosted on
-        <a href="https://github.com/Khalipa-B/recipe-generator" target="_blank"
+        <a
+          href="https://khalipa-ai-recipe-generator.netlify.app/"
+          target="_blank"
           >Netlify</a
         >
       </footer>
